Created userCard,userCardController,userSpell,userSpellController,SpellController